Apply a patch from Michael Stapelberg to detect Golang packages with invalid or missing Built-Using headers. (Closes: #891072)
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.77) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/control-file.{desc,pm}:
+    + [CL] Apply a patch from Michael Stapelberg to detect Golang packages
+      with invalid or missing Built-Using headers.  (Closes: #891072)
+
  -- Chris Lamb <lamby@debian.org>  Wed, 21 Feb 2018 19:26:55 +0000
 
 lintian (2.5.76) unstable; urgency=medium
