--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ lintian (2.5.77) UNRELEASED; urgency=medium
   * checks/control-file.{desc,pm}:
     + [CL] Apply a patch from Michael Stapelberg to detect Golang packages
       with invalid or missing Built-Using headers.  (Closes: #891072)
+  * checks/version-substvars.pm:
+    + [CL] Fix a bug in version-substvar-for-external-package parsing to
+      prevent false-positives when the LHS of the binary relation contains
+      a substvar.  Thanks to Andreas Beckmann.  (Closes: #726589)
 
  -- Chris Lamb <lamby@debian.org>  Wed, 21 Feb 2018 19:26:55 +0000
 
