--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ lintian (2.5.77) UNRELEASED; urgency=medium
   * checks/control-file.{desc,pm}:
     + [CL] Apply a patch from Michael Stapelberg to detect Golang packages
       with invalid or missing Built-Using headers.  (Closes: #891072)
+    + [CL] Apply patch from Michael Stapelberg to warn when packages do not
+      specify a XS-Go-Import-Path.  (Closes: #891184)
   * checks/version-substvars.pm:
     + [CL] Fix a bug in version-substvar-for-external-package parsing to
       prevent false-positives when the LHS of the binary relation contains
