--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
-lintian (2.5.77) UNRELEASED; urgency=medium
+lintian (2.5.77) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - built-using-field-on-arch-all-package
+      - missing-built-using-field-for-golang-package
+      - missing-xs-go-import-path-for-golang-package
 
   * checks/control-file.{desc,pm}:
     + [CL] Apply a patch from Michael Stapelberg to detect Golang packages
@@ -19,8 +23,10 @@ lintian (2.5.77) UNRELEASED; urgency=medium
   * data/common/architectures, etc.:
     + [CL] Update architecture lists to ensure the inclusion of riscv64.
       This will change everything.  (Closes: #891387)
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
- -- Chris Lamb <lamby@debian.org>  Wed, 21 Feb 2018 19:26:55 +0000
+ -- Chris Lamb <lamby@debian.org>  Tue, 27 Feb 2018 13:41:26 +0000
 
 lintian (2.5.76) unstable; urgency=medium
 
