--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.78) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 27 Feb 2018 14:04:15 +0000
+
 lintian (2.5.77) unstable; urgency=medium
 
   * Summary of tag changes:
