--- a/debian/changelog
+++ b/debian/changelog
@@ -283,7 +283,7 @@ lintian (2.5.74) unstable; urgency=medium
     + [CL] Prevent false positives when checking for missing NOTICE.txt
       files by looking inside .jar archives.  (Closes: #889760)
   * checks/systemd.{desc,pm}:
-    + [CL] Warn about unit files that install to usual WantedBy= targets.
+    + [CL] Warn about unit files that install to unusual WantedBy= targets.
       Thanks to Sam Morris for the initial patch.  (Closes: #817170)
     + [CL] Rework the no service detection, improving the (rarely
       overridden) tag names to better match what they detect as well as
