--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,13 @@ lintian (2.5.78) UNRELEASED; urgency=medium
       browser-based interface.  Thanks to Paul Wise for the report.
       (Closes: #891688)
 
+  * data/spelling/corrections:
+    + [CL] Drop the rouge → rogue correction; it's an (admittedly)
+      old-fashioned word for red cheek makeup as well as being a
+      fairly-common French word.  It was causing a false-positive in the
+      spelling-error-in-binary tag for osmocom-analog.  Thorsten Alteholz
+      for the report.  (Closes: #891794)
+
  -- Chris Lamb <lamby@debian.org>  Tue, 27 Feb 2018 14:04:15 +0000
 
 lintian (2.5.77) unstable; urgency=medium
