--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.79) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 05 Mar 2018 09:26:41 +0000
+
 lintian (2.5.78) unstable; urgency=medium
 
   * Summary of tag changes:
