--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.79) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * data/fields/obsolete-packages:
+    + [PW] Add exim and apache, replaced by exim4 and apache2
+
  -- Chris Lamb <lamby@debian.org>  Mon, 05 Mar 2018 09:26:41 +0000
 
 lintian (2.5.78) unstable; urgency=medium
