--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.79) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/changelog-file.desc:
+    + [CL] Update the description of improbable-bug-number-in-closes
+      removing the specific number as it can get out of sync with the
+      actual check.
   * checks/changes-file.pm:
     + [CL] Don't emit orig-tarball-missing-upstream-signature when the
       package provides a "foo.tar.asc" for a "foo.tar.gz".  We previously
