Emit a warning if a package uses a deprecated FTP package upload location. (Closes: #892249)

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ lintian (2.5.79) UNRELEASED; urgency=medium
       mail-transport-agent dependency but do not specify default-mta and
       packages that do not specify default-mta first in their alternatives.
       Thanks to Paul Wise for the report.  (Closes: #892143)
+  * checks/obsolete-sites.pm:
+    + [CL] Emit a warning if a package uses a deprecated FTP package upload
+      location.  (Closes: #892249)
 
   * data/fields/obsolete-packages:
     + [PW] Add exim and apache, replaced by exim4 and apache2
