--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ lintian (2.5.79) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
-  * checks/changelog-file.{desc,pm}
+  * checks/changelog-file.{desc,pm}:
     + [CL] Ignore entries that end with ":" to avoid false-positives in the
       debian-changelog-line-too-short.  Thanks to Mattia Rizollo for the
       report.  (Closes: #892197)
