--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-lintian (2.5.79) UNRELEASED; urgency=medium
+lintian (2.5.79) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - default-mta-dependency-does-not-specify-mail-transport-agent
+      - default-mta-dependency-not-listed-first
+      - depends-on-mail-transport-agent-without-alternatives
+      - mail-transport-agent-dependency-does-not-specify-default-mta
 
   * checks/changelog-file.{desc,pm}:
     + [CL] Ignore entries that end with ":" to avoid false-positives in the
@@ -26,15 +31,16 @@ lintian (2.5.79) UNRELEASED; urgency=medium
     + [CL] Warn about packages that have a relationship with a
       mail-transport-agent but do not specify default-mta and
       mail-transport-agent as alternatives.  (Closes: #892144)
-
   * checks/obsolete-sites.pm:
     + [CL] Emit a warning if a package uses a deprecated FTP package
       download location.  (Closes: #892249)
 
   * data/fields/obsolete-packages:
     + [PW] Add exim and apache, replaced by exim4 and apache2
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
- -- Chris Lamb <lamby@debian.org>  Mon, 05 Mar 2018 09:26:41 +0000
+ -- Chris Lamb <lamby@debian.org>  Sat, 10 Mar 2018 06:40:34 +0000
 
 lintian (2.5.78) unstable; urgency=medium
 
