--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.80) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 09 Mar 2018 22:59:07 -0800
+
 lintian (2.5.79) unstable; urgency=medium
 
   * Summary of tag changes:
