--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ lintian (2.5.80) UNRELEASED; urgency=medium
       package has explicit Build-Depends on dpkg-dev (>= 1.18.8) or
       debhelper (>= 10.10).  Thanks to Andreas Metzler for the report.
       (Closes: #892549)
+  * checks/script.pm:
+    + [BR] Fix FP with sensible-utils need to depends on sensible-utils.
   * checks/fields.{desc,pm}:
     + [CL] Clarify the meaning of the
       depends-on-build-essential-package-without-using-version tag by
