--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-lintian (2.5.80) UNRELEASED; urgency=medium
+lintian (2.5.80) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - build-depends-on-build-essential-package-without-using-version
+    + Removed:
+      - apache2-module-depends-on-real-apache2-package
+      - depends-on-build-essential-package-without-using-version
 
   * checks/apache2.{desc,pm}:
     + [CL] Drop apache2-module-depends-on-real-apache2-package tag as there
@@ -42,8 +47,10 @@ lintian (2.5.80) UNRELEASED; urgency=medium
   * data/debhelper/*, data/common/dh_addons:
     + [CL] Refresh all debhelper data, correcting the entry for dh-scour.
       (Closes: #889016)
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
- -- Chris Lamb <lamby@debian.org>  Fri, 09 Mar 2018 22:59:07 -0800
+ -- Chris Lamb <lamby@debian.org>  Mon, 19 Mar 2018 02:25:40 +0000
 
 lintian (2.5.79) unstable; urgency=medium
 
