--- a/t/tests/manpages-general/debian/program.1
+++ b/t/tests/manpages-general/debian/program.1
@@ -41,6 +41,7 @@ A summary of options is included below.
 For a complete description, see the Info files.
 This is a speling mistake.
 This is the false-positive spelling mistake for the proper noun German.
+This is the false-positive spelling mistake for the quasi-plural directory(S).
 .TP
 .B \-h, \-\-help
 Show summary of options.
