--- a/debian/changelog
+++ b/debian/changelog
@@ -10,10 +10,12 @@ lintian (2.5.81) UNRELEASED; urgency=medium
     + [CL] Add a pedantic warning for upstream tarballs that contain empty
       directories as these can cause problems with git-buildpackage.
       Thanks to Balint Reczey for the idea!  (Closes: #894368)
-  * checks/java.pm:
+  * checks/java.{desc,pm}:
     + [CL] Apply patch from Bas Couwenberg to bump the maximum permissible
       bytecode version number now that openjdk-9 is now the default-jdk.
       (Closes: #894397)
+    + [CL] Apply patch from Bas Couwenberg to update the description of
+      the unknown-java-class-version tag for openjdk-9.  (Closes: #894397)
   * checks/files.pm:
     + [CL] Add .ogg files to the list of non-license file extensions to
       avoid a false-positive in extra-license-file. Thanks to Innocent De
