checks/testsuite.pm: Add missing 'needs-reboot' restriction. (Closes: #894817)

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ lintian (2.5.81) UNRELEASED; urgency=medium
     + [CL] Avoid false-positives in Mallard XML files; <link href="...">
       tags are anchor element and not followed automatically. Thanks to
       Simon McVittie for the report.  (Closes: #894690)
+  * checks/testsuite.pm:
+    + [CL] Apply patch from Georg Faerber to add missing "needs-reboot" to
+      the list of known autopkgtest restrictions.  (Closes: #894817)
   * checks/udev.pm:
     + [CL] Apply patch from Thomas Dallmair to avoid false positives in the
       udev-rule-missing-subsystem tag when SUBSYSTEM GOTO is not the last
