Update the re-enabling on YAML parsing to support all versions of libyaml-libyaml-perl. This avoids a backport.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,8 @@ lintian (2.5.81) UNRELEASED; urgency=medium
   * checks/upstream-metadata.pm:
     + Re-enable YAML parsing of upstream metadata which was disabled in
       2.5.51 (via #861958) to close CVE-2017-8829 as we can now use the
-      $LoadBlessed option of YAML:XS.  Thanks to Dylan Aïssi for the
-      report.  (Closes: #894747)
+      $LoadBlessed option of YAML::XS if we have version 0.69 or above
+      Thanks to Dylan Aïssi for the report.  (Closes: #894747)
 
   * lib/Lintian/Check.pm:
     + [CL] Avoid false positives in spelling detection by allowing "(s)"
