--- a/debian/changelog
+++ b/debian/changelog
@@ -27,9 +27,11 @@ lintian (2.5.81) UNRELEASED; urgency=medium
     + [CL] Avoid false-positives in Mallard XML files; <link href="...">
       tags are anchor element and not followed automatically. Thanks to
       Simon McVittie for the report.  (Closes: #894690)
-  * checks/testsuite.pm:
+  * checks/testsuite.{desc,pm}:
     + [CL] Apply patch from Georg Faerber to add missing "needs-reboot" to
       the list of known autopkgtest restrictions.  (Closes: #894817)
+    + [CL] Apply patch from Georg Faerber to adjust the autopkgtest
+      URIs from Alioth to salsa.debian.org.  (Closes: #894820)
   * checks/udev.pm:
     + [CL] Apply patch from Thomas Dallmair to avoid false positives in the
       udev-rule-missing-subsystem tag when SUBSYSTEM GOTO is not the last
