Add missing "[CL] " prefix.

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,8 +37,8 @@ lintian (2.5.81) UNRELEASED; urgency=medium
       udev-rule-missing-subsystem tag when SUBSYSTEM GOTO is not the last
       "GOTO" statement.  Thanks!  (Closes: #894356)
   * checks/upstream-metadata.pm:
-    + Re-enable YAML parsing of upstream metadata which was disabled in
-      2.5.51 (via #861958) to close CVE-2017-8829 as we can now use the
+    + [CL] Re-enable YAML parsing of upstream metadata which was disabled
+      in 2.5.51 (via #861958) to close CVE-2017-8829 as we can now use the
       $LoadBlessed option of YAML::XS if we have version 0.69 or above
       Thanks to Dylan Aïssi for the report.  (Closes: #894747)
 
