Change the severity from pedantic ("P:") to info ("I:") for the missing-explanation-for-repacked-upstream-tarball tag.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,9 @@ lintian (2.5.81) UNRELEASED; urgency=medium
     + [CL] Stop recommending that packages with repacked tarballs specify a
       get-orig-source target; this was removed in Debian Policy 4.1.4 in
       favour of uscan(1) and debian/watch.
+  * checks/source-copyright.desc:
+    + [CL] Change the severity from pedantic ("P:") to info ("I:") for the
+      missing-explanation-for-repacked-upstream-tarball tag.
   * checks/testsuite.{desc,pm}:
     + [CL] Apply patch from Georg Faerber to add missing "needs-reboot" to
       the list of known autopkgtest restrictions.  (Closes: #894817)
