--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,9 @@ lintian (2.5.81) UNRELEASED; urgency=medium
     + [CL] Stop recommending that packages with repacked tarballs specify a
       get-orig-source target; this was removed in Debian Policy 4.1.4 in
       favour of uscan(1) and debian/watch.
+  * checks/scripts.pm:
+    + [CL] Also include the offending/unknown shebang in the output of
+      missing (unversioned) interpreters.
   * checks/source-copyright.desc:
     + [CL] Change the severity from pedantic ("P:") to info ("I:") for the
       missing-explanation-for-repacked-upstream-tarball tag.
